// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailKadastraalObject should not render size 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Kadastrale gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Grootte"
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailKadastraalObject should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Kadastrale gemeente"
      value="Kadastrale gemeente name"
    />
    <MapDetailResultItem
      label="Gemeente"
      value="Gemeentenaam!"
    />
    <MapDetailResultItem
      label="Grootte"
      value="115 m²"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailKadastraalObject should render with zero value for size 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Kadastrale gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Grootte"
      value="0 m²"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailKadastraalObject should render without kadastrale gemeente 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Kadastraal object label"
  title="Kadastraal object"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Kadastrale gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Gemeente"
      value=""
    />
    <MapDetailResultItem
      label="Grootte"
      value="115 m²"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;
